# refal5-lsp

./: .gitignore  Makefile  README.md  go.mod  go.sum
cmd/server/: main.go
examples/: cart-prod.ref  inc.ref  next-id.ref
internal/documents/: document.go  in_memory_storage.go  storage.go
internal/refal5/ast/: ast.go  ast_error.go  ast_node.go  condition_node.go  diagnostics_debounce.go  error_visitor.go  external_decl_node.go  function_node.go  pattern_node.go  position.go  program_node.go  result_node.go  sentence_lhs_node.go  sentence_node.go  sentence_rhs_node.go  symbol_table.go  types.go  variable_node.go
internal/refal5/objects/: builtin.go  (+2 more)
internal/server/: diagnostics.go  handler.go  server.go  start_settings.go
internal/tree_sitter_refal5/: parser.c
pkg/reader/: reader.go
pkg/symbols/: symbols.go
tree-sitter-refal5/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.ref  tree-sitter.json
tree-sitter-refal5/bindings/c/: tree-sitter-refal5.h  tree-sitter-refal5.pc.in
tree-sitter-refal5/bindings/go/: binding.go
tree-sitter-refal5/bindings/node/: binding.cc
tree-sitter-refal5/bindings/python/tests/: test_binding.py
tree-sitter-refal5/bindings/python/tree_sitter_refal5/: __init__.py  binding.c
tree-sitter-refal5/bindings/rust/: build.rs  lib.rs
tree-sitter-refal5/bindings/swift/TreeSitterRefal5Tests/: TreeSitterRefal5Tests.swift
tree-sitter-refal5/src/: grammar.json  node-types.json  parser.c  scanner.c
vscode/refal5/: CHANGELOG.md  README.md  package-lock.json  package.json
(+3 files in other folders)
