[package]
name = "tree-sitter-refal5"
description = "Refal5 grammar for tree-sitter"
version = "0.1.0"
authors = ["Kirill Kiselev <kirillkiselev2003@yandex.ru>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "refal5"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/t1d333/refal5-lsp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
